[package]
name = "parse-pull"
version = "0.1.0"
authors = ["lironh <lironenk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
tokio = { version = "0.2", features = ["full"] }
ansi_term = "0.12"
actix-web = "3"
actix-files = "0.4.0"



